--- a/LearningAll/MainWindow.xaml
+++ b/LearningAll/MainWindow.xaml
@@ -10,15 +10,17 @@
         <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="299" Margin="10,10,0,0" VerticalAlignment="Top" Width="497">
             <TabItem Header="Terms">
                 <Grid Background="#FFE5E5E5">
-                    <GroupBox x:Name="groupBox" Header="MyDelegate" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="163" Width="471">
-                        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="100" Margin="10,10,0,0" VerticalAlignment="Top" Width="441" SelectionChanged="listBox_SelectionChanged"/>
+                    <GroupBox x:Name="groupBox" Header="MyDelegate" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="117" Width="471">
+                        
+                        <TextBox x:Name="textBoxDelegate" HorizontalAlignment="Left" Height="52" Margin="20,22,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="422" />
+
                     </GroupBox>
+                    <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="10,132,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="TabItem">
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
-            <Button x:Name="button" Content="Button" Height="100" Width="75"/>
         </TabControl>
 
     </Grid>
